(lang dune 2.8)
(name compiler-libs-either-toplevel)

(generate_opam_files true)

(license ISC)
(source (github NathanReb/compiler-libs-either-toplevel))
(maintainers "Nathan Rebours <nathan.p.rebours@gmail.com>")
(authors "Nathan Rebours <nathan.p.rebours@gmail.com>")

(package
 (name compiler-libs-either-toplevel)
 (synopsis "META file for OCaml native toplevel"))
